--- a/css/css-exercises/flex/04-flex-information/style.css
+++ b/css/css-exercises/flex/04-flex-information/style.css
@@ -8,8 +8,11 @@ body {
 }
 
 .element {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 img {
